# Campus-Classroom-Reserve

./: .gitignore  .pre-commit-config.yaml  README.md  campus_classroom_reserve.db  debug_database.db  docker-compose.yaml  main.py  pyproject.toml
backend/: .env.example  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  seed_rooms.py  seed_rooms.sql
backend/src/app/: main.py
backend/src/app/core/: auth.py  database.py  settings.py
backend/src/app/models/: reservation.py  room.py  user.py
backend/src/app/repository/: reservation.py  room.py  user.py
backend/src/app/routes/: reservation.py  room.py
doc/: frontend_visual_design.excalidraw  frontend_wireframe.excalidraw
frontend/: Dockerfile  README.md  components.json  docker-compose.yaml  package-lock.json  package.json  tsconfig.json  vitest.config.ts
frontend/.next/dev/: prerender-manifest.json  trace
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: SignInCard.tsx  SignUpCard.tsx  footer.tsx  navbar.tsx
frontend/src/context/: AuthContext.tsx
frontend/types/: validator.ts
src/app/: main.py
src/app/core/: auth.py  database.py  settings.py
src/app/models/: reservation.py  room.py  user.py
src/app/repository/: reservation.py  room.py  user.py
src/app/routes/: reservation.py  room.py  user.py
src/app/schemas/: reservation.py  room.py  user.py
src/app/services/: reservation.py  room.py  user.py
src/test/functional_tests/: test_routes.py
src/test/unit_tests/: test_reservation.py  test_room.py  test_services.py  test_user.py
(+54 files in other folders)
