[project]
name = "campus-classroom-reserve"
version = "0.1.0"
description = "A classroom reservation service for SDSU."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.129.0",
    "jwt>=1.4.0",
    "pwdlib[argon2]>=0.3.0",
    "ruff>=0.15.1",
    "sqlalchemy>=2.0.48",
]
